feat: ajustando o css d header para mante-lo fixo no topo #012

--- a/src/style/utils/header.css
+++ b/src/style/utils/header.css
@@ -1,6 +1,10 @@
 .header {
-  background-color: var(--darker-color1);
+  position: fixed;
+  top: 0;
+  width: 100%;
   height: auto;
+  background-color: var(--darker-color1);
+  z-index: 1000;
 }
 
 .container {
