--- a/src/style/utils/header.css
+++ b/src/style/utils/header.css
@@ -1,137 +1,102 @@
 .header {
+  background-color: var(--darker-color1);
   position: fixed;
   top: 0;
   width: 100%;
-  height: auto;
-  background-color: var(--darker-color1);
+  padding: 1rem 0;
   z-index: 1000;
-}
-
-.container {
-  height: 100%;
 }
 
 .header-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1.43rem;
 }
-
-.column {
-  padding: 0;
-}
-
-/* LOGO */
 
 .logo-container {
-  width: 9.44rem;
-  height: 3.56rem;
-  display: flex;
-  align-items: center;
-  margin-top: 1.75rem;
+  width: 12.5%;
 }
 
 .logo-container img {
   width: 100%;
-  height: auto;
 }
 
-/* MENU */
-
 .navbar {
+  display: flex;
+  align-items: center;
   background-color: transparent;
-  border-color: transparent;
+  box-shadow: none;
 }
 
 .navbar-menu-container {
-  margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+  gap: 1.75rem;
 }
 
 .navbar-item {
-  display: flex;
-  align-items: center;
-  height: 1.81rem;
-  margin-right: 3.75rem;
-  font-family: Roboto;
-  font-size: 0.87rem;
-  font-weight: 500;
-  line-height: 1.00625rem;
+  flex-grow: 1;
   color: var(--light-color3);
-  transition: color 0.3s;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  text-align: center;
+  font-size: 0.875rem;
+  font-weight: 700;
 }
 
 .navbar-item:hover {
-  color: var(--primary-color-variant1);
   background-color: transparent;
-  border-color: transparent;
-}
-
-.home {
   color: var(--primary-color-variant1);
-  font-weight: 700;
 }
-
-.filmes,
-.series .sobreNos {
-  color: var(--light-color3);
-}
-
-.sobreNos {
-  white-space: nowrap;
-}
-
-/* BOTÕES */
 
 .buttons-container {
-  margin-top: 2.8rem;
-  margin-bottom: 2rem;
+  display: flex;
+  gap: 0.5rem;
 }
 
-.button-login,
-.button-cadastrar {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 7.03rem;
-  height: 1.81rem;
-  font-family: Roboto;
-  font-size: 0.75rem;
-  font-weight: 700;
-  line-height: 1;
-  border-radius: 0.5rem;
-  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+.buttons-container .button-login,
+.buttons-container .button-cadastrar {
+  padding: 0.5rem 1rem;
+  border: none;
+  cursor: pointer;
+}
+
+.buttons-container .button-login {
+  margin-right: 1.25rem;
 }
 
 .button-login {
+  width: 7.029rem;
+  height: 1.812rem;
+  border-radius: 0.5rem;
   background-color: var(--primary-color-dark);
   color: var(--light-color1);
+  font-size: 0.75rem;
+  font-weight: 700;
+  transition: all 0.3s ease;
 }
 
 .button-login:hover {
+  transform: scale(1.05);
   background-color: var(--primary-color);
   color: var(--white-color);
-  box-shadow: 0px 0px 0.31rem rgba(0, 0, 0, 0.3);
-  transform: scale(1.05); /* aumenta o tamanho do botão em 5% */
-  transition: background-color 0.3s, color 0.3s;
 }
 
-.button-cadastrar {
-  background-color: transparent;
-  border: 0.06rem var(--primary-color-dark) solid;
-  color: var(--primary-color-dark);
+.header .buttons-container .button-cadastrar {
+  width: 7.029rem;
+  height: 1.812rem;
+  border-radius: 0.5rem;
+  border: 0.06rem solid var(--primary-color-dark);
+  color: var(--light-color1);
+  font-size: 0.75rem;
+  font-weight: 700;
+  transition: all 0.3s ease;
 }
 
-.button-cadastrar:hover {
+.header .buttons-container .button-cadastrar:hover {
+  transform: scale(1.05);
+  border-width: 0.12rem;
   border-color: var(--primary-color);
-  box-shadow: 0px 0px 0.31rem rgba(0, 0, 0, 0.3);
-  color: var(--primary-color);
-}
-
-.is-margin-left {
-  margin-right: 1.75rem;
-}
-
-.custom-border {
-  border: 0.06rem var(--primary-color-dark) solid;
+  color: var(--light-color1);
 }
