refactor: ajustando o homePage.html ao grid.css

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -6,6 +6,7 @@
 /* PAGES */
 
 /* ELEMENTS */
+@import './utils/grid.css';
 @import './utils/header.css';
 @import './utils/main.css';
 @import './utils/footer.css';
