--- a/src/style/cadastro.css
+++ b/src/style/cadastro.css
@@ -5,72 +5,82 @@
     height: auto;
     background-color: var(--darker-color1);
     z-index: 1000;
-  }
-  
-  .container {
+}
+
+.container {
     height: 100%;
-  }
-  
-  .header-content {
+}
+
+.header-content {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 1.43rem;
-  }
-  
-  .column {
+}
+
+.column {
     padding: 0;
-  }
-  
-  /* LOGO */
-  
-  .logo-container {
+}
+
+/* LOGO */
+
+.logo-container {
     width: 9.44rem;
     height: 3.56rem;
     display: flex;
     align-items: center;
     margin-top: 1.75rem;
-  }
-  
-  .logo-container img {
+}
+
+.logo-container img {
     width: 100%;
     height: auto;
-  }
-  
-  /* Main content must take all the available space */
+}
+
+
 .page-container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-  }
-  
-  .main-content {
+}
+
+.main-content {
     flex: 1;
-  }
-  
+}
+
+.cadastro {
+    color: #F0EFEF;
+    font-family: Roboto;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 16px;
+    /* 40% */
+    letter-spacing: -0.4px;
+}
 
 .footer {
     background-color: var(--black-color);
     color: var(--white-color);
     height: 7rem;
-  }
-  
-  .title,
-  .subtitle {
+}
+
+.title,
+.subtitle {
     margin-bottom: 0.5rem;
     color: var(--white-color);
     font-family: Roboto;
-  
+
     font-weight: 400;
     word-wrap: break-word;
-  }
-  
-  .title {
+}
+
+.title {
     font-size: 1.25rem;
     line-height: 1.5rem;
-  }
-  
-  .subtitle {
+}
+
+.subtitle {
     font-size: 0.75rem;
     line-height: 1.05rem;
-  }
+}
