--- a/src/style/utils/main.css
+++ b/src/style/utils/main.css
@@ -2,6 +2,11 @@
   padding-top: 4.125rem; /* Ajuste para compensar o header fixo */
 }
 
+.main-content {
+  background-color: var(--darker-color3);
+}
+
+/* Seção 1 */
 .banner-section {
   position: relative;
 }
@@ -101,4 +106,86 @@
   position: absolute;
   bottom: 0;
   left: 0;
+}
+
+/* Section 2 */
+.guia-de-streaming-container {
+  margin-top: 40px;
+}
+
+.guia-de-streaming-title {
+  color: var(--white-color);
+  text-align: center;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 54px;
+  text-transform: capitalize;
+}
+
+.guia-de-streaming-subtitle {
+  color: var(--light-color5);
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22.5px;
+  padding-top: 16px;
+}
+
+.guia-de-streaming-imagens {
+  display: flex;
+  justify-content: center;
+  gap: 80px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.image-container {
+  position: relative;
+  border-radius: 5px;
+  background: rgba(102, 102, 102, 0.3);
+  overflow: hidden;
+  border: 1px solid #595858;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  opacity: 0.9;
+}
+
+.image-container:hover {
+  transform: scale(1.05);
+  border: 0.5px solid var(--light-color4);
+  opacity: 1;
+}
+
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 1;
+  transition: background 0.3s ease;
+}
+
+.image-container:hover .image-overlay {
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.image-description {
+  color: var(--white-color);
+  font-size: 16px;
+  text-align: center;
+  padding: 10px;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.image-container:hover .image-description {
+  transform: scale(1.1);
+  opacity: 1;
 }
