--- a/src/style/utils/cadastro.css
+++ b/src/style/utils/cadastro.css
@@ -20,13 +20,16 @@ height: 997px;
 } 
 
 .cadastro-logo{
+margin: 10%;
 margin-left: 15%;
 position: absolute;
 flex-direction: column;
-width: 70px;
-height: 3s9px;
+width: 133px;
+height: 29px;
 flex-shrink: 0;
 }
+
+
 .right-section {
  width: 82%;
  height: 100%;
@@ -39,7 +42,7 @@ flex-shrink: 0;
 .cadastro-title-login {
   color: #F0EFEF;
   font-family: Roboto;
-  font-size: 40px;
+  font-size: 100%;
   font-style: normal;
   font-weight: 700;
   letter-spacing: -0.4px;
@@ -49,7 +52,7 @@ flex-shrink: 0;
 .title-personal-info{
  color: #F0EFEF;
  font-family: Roboto;
- font-size: 14px;
+ font-size: 60%;
  font-style: normal;
  font-weight: 700;
  line-height: 16px;
@@ -59,7 +62,7 @@ flex-shrink: 0;
 .label-nome-completo {
 color: #FFF;
 font-family: Roboto;
-font-size: 14px;
+font-size: 10px;
 font-style: normal;
 font-weight: 500;
 line-height: 100%;
@@ -68,7 +71,7 @@ width: 99.829px;
     
 }
 .rectangle-97{
-width: 700px;
+width: 900px;
 height: 30px;
 flex-shrink: 0;
 background: #131117;
@@ -91,9 +94,9 @@ border: 1px solid #7C38C0;
 .container95 {
 display: flex;
 flex-wrap: wrap; 
-gap: 50px; /* Espaçamento entre os chips */
+gap: 10%; /* Espaçamento entre os chips */
 padding: 20px; /* Espaçamento interno do contêiner */
-max-width: 600px; /* Largura máxima do contêiner */
+max-width: 800px; /* Largura máxima do contêiner */
 border-radius: 15px; /* Bordas arredondadas no contêiner */
 box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
 }
@@ -105,7 +108,7 @@ box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
   border-radius: 25px; /* Borda arredondada */
   padding: 10px 20px; /* Espaçamento interno */
   color: white; /* Cor do texto */
-  font-size: 15px; /* Tamanho da fonte */
+  font-size: 10px; /* Tamanho da fonte */
   cursor: pointer; /* Cursor de mãozinha */
   display: flex;
   align-items: center;
@@ -130,15 +133,7 @@ box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
   color: white;
 }
 
-/* Ajuste para centralizar o conteúdo */
-.button-color {
-  padding: 10px;
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  width: 1000px;
-  height: 250px /* Ajusta a altura para centralizar verticalmente */
-}
+
 .container95 {
   display: flex;
   gap: 500px;
@@ -161,8 +156,8 @@ margin-left: 300px;
 }
 
 .cadastro-rectangle-footer {
-width: 360px;
-height: 56px;
+width: 260px;
+height: 46px;
 flex-shrink: 0;
 border-radius: 8px;
 background: #6100C2;
