refactor: adicionando cor a paleta de cores

--- a/src/style/utils/colors.css
+++ b/src/style/utils/colors.css
@@ -26,6 +26,7 @@
 
   /* DARK COLORS */
   --darker-color: #1e1e1e;
+  --darker-color0: #141414;
   --darker-color1: #06080d;
   --darker-color2: #131117;
   --darker-color3: #171c21;
