--- a/src/style/components/main.css
+++ b/src/style/components/main.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 3.25rem;
 }
 
 .banner-section img {
@@ -57,7 +58,7 @@
   height: 9.75rem;
   flex-shrink: 0;
   color: var(--white-color);
-  font-size: 2.75rem;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 700;
   line-height: 115%;
@@ -110,6 +111,147 @@
   height: 2rem;
   background-color: var(--black-color);
   align-self: flex-end;
+}
+
+/* Seção 2 - Tudo em um único lugar */
+
+.detalhes-guia-de-streaming {
+  margin-top: -1rem; /* Ajuste negativo para sobreposição */
+}
+
+.guia-de-streaming {
+  margin-top: -4rem;
+}
+
+.detalhes-guia-de-streaming .cards-container {
+  padding: 0 1rem;
+}
+
+.detalhes-guia-de-streaming .card-detalhes-title,
+.detalhes-guia-de-streaming .card-detalhes-subtitle {
+  text-align: center;
+  word-wrap: break-word;
+  padding: 0 1rem;
+  margin-bottom: 1rem; /* Default margin, will override below for subtitle */
+}
+
+.detalhes-guia-de-streaming .card-detalhes-title {
+  color: var(--white-color);
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.215rem;
+}
+
+.detalhes-guia-de-streaming .card-detalhes-subtitle {
+  color: var(--light-color5);
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.406rem;
+  margin-bottom: 2.5rem;
+}
+
+.detalhes-guia-de-streaming .cards-container-details {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.25rem;
+  max-width: 100%;
+  justify-content: center;
+  width: 56.75rem;
+  margin-bottom: 5.75rem;
+}
+
+.detalhes-guia-de-streaming .card-guia-completo {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 30rem;
+  background: linear-gradient(
+    180deg,
+    var(--light-color5) 3%,
+    var(--darker-color2) 62%
+  );
+  max-width: 18.75rem;
+  min-height: cal(
+    1.25rem * 5 + 1.75rem + 1.25rem + 1rem
+  ); /* Altura mínima de 5 linhas: soma das alturas de cinco linhas de texto mais os valores das margens. */
+  border-radius: 8px;
+  border: 1px var(--darker-color4) solid;
+  box-sizing: border-box;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.detalhes-guia-de-streaming .card-guia-completo::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Cor de fundo semi-transparente */
+  border-radius: 0.5rem;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.detalhes-guia-de-streaming .card-guia-completo:hover::after {
+  opacity: 0.5;
+}
+
+.detalhes-guia-de-streaming .card-guia-completo img {
+  border-radius: 0.5rem;
+}
+
+.detalhes-guia-de-streaming .card-title-seu-guia {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 3rem;
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin: 1.75rem 0 1.25rem;
+  color: var(--white-color);
+  padding: 0 0.75rem;
+}
+
+.detalhes-guia-de-streaming .card-content-info {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: start;
+  text-align: justify;
+  font-size: 0.9rem;
+  font-weight: 300;
+  line-height: 1.25rem;
+  margin-top: auto;
+  margin-bottom: 1.687rem;
+  color: var(--white-color);
+  padding: 0 0.75rem;
+}
+
+.detalhes-guia-de-streaming .card-link-container {
+  position: relative;
+  text-align: left;
+  margin-left: 2rem;
+  padding-bottom: 2.5rem;
+}
+
+.detalhes-guia-de-streaming .card-link {
+  position: relative;
+  display: inline-block;
+  font-size: 0.75rem;
+  font-weight: 400;
+  color: var(--info-color);
+  text-decoration: none;
+  transition: all 0.2s ease-in-out;
+  z-index: 1;
+}
+
+.detalhes-guia-de-streaming .card-link:hover {
+  font-size: 0.8rem;
+  font-weight: 500;
+  text-decoration: underline;
 }
 
 /* Section 2 - Seu Guia de Streaming */
@@ -250,139 +392,6 @@
 .cartaz-image {
   border: 1px solid #373737;
   width: 100%;
-}
-
-/* Seção - Tudo em um único lugar */
-
-.detalhes-guia-de-streaming .cards-container {
-  padding: 0 1rem;
-}
-
-.detalhes-guia-de-streaming .card-detalhes-title,
-.detalhes-guia-de-streaming .card-detalhes-subtitle {
-  text-align: center;
-  word-wrap: break-word;
-  padding: 0 1rem;
-  margin-bottom: 1rem; /* Default margin, will override below for subtitle */
-}
-
-.detalhes-guia-de-streaming .card-detalhes-title {
-  color: var(--white-color);
-  font-size: 2rem;
-  font-weight: 500;
-  line-height: 1.215rem;
-}
-
-.detalhes-guia-de-streaming .card-detalhes-subtitle {
-  color: var(--light-color5);
-  font-size: 1.25rem;
-  font-weight: 400;
-  line-height: 1.406rem;
-  margin-bottom: 2.5rem;
-}
-
-.detalhes-guia-de-streaming .cards-container-details {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1.25rem;
-  max-width: 100%;
-  justify-content: center;
-  width: 56.75rem;
-  margin-bottom: 5.75rem;
-}
-
-.detalhes-guia-de-streaming .card-guia-completo {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 30rem;
-  background: linear-gradient(
-    180deg,
-    var(--light-color5) 3%,
-    var(--darker-color2) 62%
-  );
-  max-width: 18.75rem;
-  min-height: cal(
-    1.25rem * 5 + 1.75rem + 1.25rem + 1rem
-  ); /* Altura mínima de 5 linhas: soma das alturas de cinco linhas de texto mais os valores das margens. */
-  border-radius: 8px;
-  border: 1px var(--darker-color4) solid;
-  box-sizing: border-box;
-  text-align: center;
-  margin: 0 auto;
-}
-
-.detalhes-guia-de-streaming .card-guia-completo::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Cor de fundo semi-transparente */
-  border-radius: 0.5rem;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-.detalhes-guia-de-streaming .card-guia-completo:hover::after {
-  opacity: 0.5;
-}
-
-.detalhes-guia-de-streaming .card-guia-completo img {
-  border-radius: 0.5rem;
-}
-
-.detalhes-guia-de-streaming .card-title-seu-guia {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 3rem;
-  font-size: 1.25rem;
-  font-weight: bold;
-  margin: 1.75rem 0 1.25rem;
-  color: var(--white-color);
-  padding: 0 0.75rem;
-}
-
-.detalhes-guia-de-streaming .card-content-info {
-  display: flex;
-  flex: 1;
-  align-items: center;
-  justify-content: start;
-  text-align: justify;
-  font-size: 0.9rem;
-  font-weight: 300;
-  line-height: 1.25rem;
-  margin-top: auto;
-  margin-bottom: 1.687rem;
-  color: var(--white-color);
-  padding: 0 0.75rem;
-}
-
-.detalhes-guia-de-streaming .card-link-container {
-  position: relative;
-  text-align: left;
-  margin-left: 2rem;
-  padding-bottom: 2.5rem;
-}
-
-.detalhes-guia-de-streaming .card-link {
-  position: relative;
-  display: inline-block;
-  font-size: 0.75rem;
-  font-weight: 400;
-  color: var(--info-color);
-  text-decoration: none;
-  transition: all 0.2s ease-in-out;
-  z-index: 1;
-}
-
-.detalhes-guia-de-streaming .card-link:hover {
-  font-size: 0.8rem;
-  font-weight: 500;
-  text-decoration: underline;
 }
 
 /* Media queries para responsividade */
