--- a/src/components/header.html
+++ b/src/components/header.html
@@ -18,7 +18,7 @@
           <a id="login-container" class="button-login" href="pages/login.html">
             Login
           </a>
-          <button class="button-cadastrar">Cadastrar</button>
+          <a class="button-cadastrar" href="pages/cadastro.html">Cadastrar</a>
         </div>
       </div>
     </div>
