--- a/src/style/index.css
+++ b/src/style/index.css
@@ -6,7 +6,7 @@
 /* PAGES */
 /* Página Login */
 @import './components/login.css';
-@import './components/cadastro.css';
+@import './components/register.css';
 
 /* Página Home (index.html) */
 @import './components/main.css';
