--- a/src/style/utils/colors.css
+++ b/src/style/utils/colors.css
@@ -23,6 +23,7 @@
   --light-color4: #cbcccd;
   --light-color5: #a8a9a6;
   --light-color6: #acadb3;
+  --light-color7: #7d7e7f;
 
   /* DARK COLORS */
   --darker-color: #1e1e1e;
